crates/otter-runtime/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.stderr
error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<otter_bytecode::BytecodeModule>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<otter_vm::executable::ExecutableModule>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<otter_vm::property_atom::AtomTable>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<num_bigint::bigint::BigInt>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<SymbolBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<TemporalPayload>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<IntlPayload>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<DataViewBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<TypedArrayBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<ProxyBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<(dyn for<'a> Fn(&'a str, EvalCompileOptions) -> Result<otter_bytecode::BytecodeModule, std::string::String> + 'static)>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const ObjectBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const ArrayBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const IteratorState`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const MapBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const SetBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const WeakMapBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const WeakSetBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const WeakRefBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const FinalizationRegistryBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `Rc<LocalBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const BoundFunctionBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const NativeFunctionBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const JsRegExpBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const GeneratorBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const ClassConstructorBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const object::shape_body::ShapeBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error[E0277]: `Rc<str>` cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ `Rc<str>` cannot be sent between threads safely
  |
  = help: within `(Rc<str>, otter_gc::compressed::Gc<ObjectBody>)`, the trait `Send` is not implemented for `Rc<str>`
  = note: required because it appears within the type `(Rc<str>, otter_gc::compressed::Gc<ObjectBody>)`
  = note: required for `hashbrown::raw::RawTable<(Rc<str>, otter_gc::compressed::Gc<ObjectBody>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<Rc<str>, otter_gc::compressed::Gc<ObjectBody>, RandomState>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<Rc<str>, otter_gc::compressed::Gc<ObjectBody>>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `Interpreter`
 --> $WORKSPACE/crates/otter-vm/src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&mut Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeCx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeCx<'rt> {
  |                   ^^^^^^^^^
note: required because it appears within the type `NativeCtx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required because it's used within this `async` block
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18
  |
5 |     tokio::spawn(async move {
  |                  ^^^^^^^^^^
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18: 5:28}`, the trait `Send` is not implemented for `*mut otter_gc::header::GcHeader`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:7:30
  |
7 |         std::hint::black_box(ctx);
  |                              ^^^ has type `NativeCtx<'_>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error[E0277]: `*const JsStringBody` cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:5
  |
5 | /     tokio::spawn(async move {
6 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
7 | |         std::hint::black_box(ctx);
8 | |     });
  | |______^ `*const JsStringBody` cannot be sent between threads safely
  |
  = help: within `(std::string::String, otter_gc::compressed::Gc<JsStringBody>)`, the trait `Send` is not implemented for `*const JsStringBody`
note: required because it appears within the type `PhantomData<*const JsStringBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<JsStringBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required because it appears within the type `(std::string::String, otter_gc::compressed::Gc<JsStringBody>)`
  = note: required for `hashbrown::raw::RawTable<(std::string::String, otter_gc::compressed::Gc<JsStringBody>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<std::string::String, otter_gc::compressed::Gc<JsStringBody>, RandomState>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<std::string::String, otter_gc::compressed::Gc<JsStringBody>>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `object::shape_runtime::ShapeRuntime`
 --> $WORKSPACE/crates/otter-vm/src/object/shape_runtime.rs
  |
  | pub(crate) struct ShapeRuntime {
  |                   ^^^^^^^^^^^^
note: required because it appears within the type `Interpreter`
 --> $WORKSPACE/crates/otter-vm/src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&mut Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeCx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeCx<'rt> {
  |                   ^^^^^^^^^
note: required because it appears within the type `NativeCtx<'_>`
 --> $WORKSPACE/crates/otter-vm/src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required because it's used within this `async` block
 --> tests/compile_fail/tokio_spawn_native_ctx_is_not_send.rs:5:18
  |
5 |     tokio::spawn(async move {
  |                  ^^^^^^^^^^
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`
